src/sass/_buttons.scss
$buttonPrimaryHeight: 44px;
$buttonSecondaryHeight: 32px;
$buttonSecondarySmallHeight: 24px;

$buttonPrimaryFontSize: 15px;
$buttonSecondaryFontSize: 12px;

$buttonPrimaryFontFamily: $fontFamilySecondary;
$buttonSecondaryFontFamily: $fontFamilySecondary;

$buttonPrimaryFontColor: $white;

$buttonColor: $mintPrimary;
$buttonColorGradient: #84ddaf;
$buttonShadowColor: #67c996;

$buttonAltColor: $bluePrimary;
$buttonAltColorGradient: #73C3FF;
$buttonAltShadowColor: #57aff2;

$buttonDarkColor: $black;
$buttonDarkColorGradient: #262626;
$buttonDarkShadowColor: $black;

$buttonFbColor: #3b5997;
$buttonFbColorGradient: #4668b2;
$buttonFbShadowColor: #355088;

$buttonSecondaryColor: $mintPrimary;
$buttonSecondaryTextColorHover: $white;
$buttonSecondaryAltColor: $bluePrimary;
$buttonSecondaryAltTextColorHover: $white;
$buttonSecondaryDarkColor: $black;
$buttonSecondaryDarkTextColorHover: $white;
$buttonSecondaryPeachColor: $peachPrimary;
$buttonSecondaryPeachTextColorHover: $white;
$buttonSecondaryGrayColor: $grayPrimary;
$buttonSecondaryGrayTextColorHover: $white;
$buttonSecondaryLightColor: $white;
$buttonSecondaryLightTextColorHover: $black;
$buttonSecondaryActionColor: $graySecondary;
$buttonSecondaryActionTextColor: $black;
$buttonSecondaryActionTextColorHover: $white;
$buttonSecondaryLightBlueColor: $blueSecondary;
$buttonSecondaryLightBlueTextColorHover: $white;

$buttonSecondaryIconColor: $graySecondary;
$buttonSecondaryIconBorderColorHover: $grayPrimary;

$iconAsButtonColor: $bluePrimary;
$iconAsButtonLightColor: $white;
$iconAsButtonGrayColor: $grayPrimary;

$buttonRoundAddSize: 50px;
$buttonRoundAddFontSize: 18px;
$buttonRoundAddColor: $white;
$buttonRoundLabelFontFamily: $fontFamilySecondary;
$buttonRoundLabelFontFamily: $fontFamilySecondary;
$buttonRoundLabelFontSize: 10px;
$buttonRoundLabelBackground: $mintSecondaryLight;
$buttonRoundLabelColor: $black;

@mixin mint-button-basic-styles() {
  @include component;
  cursor: pointer;
  text-transform: uppercase;
  text-decoration: none;
  font-weight: bold;
  &:active,
  &:focus,
  &:hover {
    text-decoration: none;
  }
}

@mixin mint-button-basic-dimensions($height) {
  border-radius: $height/2;
  height: $height;
  padding: 0 $height/2;
}

@mixin mint-button-basic-colors($borderColor, $fontColor, $backgroundColor) {
  border-color: $borderColor;
  color: $fontColor;
  background-color: $backgroundColor;
}

@mixin mint-button-primary-active($fontColor) {
  transition: background-position 0.3s ease-out;
  &:hover, &:focus {
    background-position: 0 10px;
    outline: none;
  }
  &:active {
    color: rgba($fontColor, 0.7);
    outline: none;
  }
}

@mixin mint-button-secondary-active($borderColor, $fontColor, $backgroundColor) {
  &:hover, &:focus {
    border-color: $borderColor;
    color: $fontColor;
    background-color: $backgroundColor;
  }
  &:active {
    color: rgba($fontColor, 0.7);
    outline: none;
  }
  &:active &__hole {
    opacity: 0.7;
  }
}

@mixin mint-button-secondary-with-icon-active($borderColor, $textColor) {
  &:hover, &:focus {
    color: $textColor;
    background-color: transparent;
    border-color: $borderColor;
    transition: border-color 0.1s ease-in;
  }
}

@mixin mint-button-primary-three-color-variant($buttonColor, $gradientColor, $buttonShadowColor: null) {
  background-color: $buttonColor;
  background: $gradientColor linear-gradient(170deg, $gradientColor 0%, $gradientColor 50%, $buttonColor 51%, $buttonColor 100%) no-repeat;
  @if($buttonShadowColor) {
    box-shadow: 0 -1px 0 $buttonShadowColor inset;
  }
  &:hover, &:focus {
    background-color: $gradientColor;
  }
}

@mixin mint-button-secondary-two-color-variant($colorOne, $colorTwo) {
  @include mint-button-basic-colors($colorOne, $colorOne, transparent);
  @include mint-button-secondary-active($colorOne, $colorTwo, $colorOne);

  &-inverse {
    @include mint-button-basic-colors($colorOne, $colorTwo, $colorOne);
    @include mint-button-secondary-active($colorOne, $colorOne, transparent);
  }
}

@mixin mint-button-secondary-three-color-variant($bgColor, $textColor, $hoverTextColor) {
  border: 0;
  padding: 0 $buttonSecondaryHeight /2 + 2px;
  @include mint-button-basic-colors($bgColor, $textColor, $bgColor);
  @include mint-button-secondary-active($textColor, $hoverTextColor, $textColor);

  &-inverse {
    border: 0;
    padding: 0 $buttonSecondaryHeight /2 + 2px;
    @include mint-button-basic-colors($textColor, $hoverTextColor, $textColor);
    @include mint-button-secondary-active($bgColor, $textColor, $bgColor);
  }
}

// Primary buttons
.mint-button-primary {
  @include mint-button-basic-styles();
  @include mint-button-basic-dimensions($buttonPrimaryHeight);
  @include mint-button-basic-colors('transparent', $buttonPrimaryFontColor, $buttonColor);
  @include mint-button-primary-three-color-variant($buttonColor, $buttonColorGradient, $buttonShadowColor);
  @include hole;

  border: 0;
  font-size: $buttonPrimaryFontSize;
  font-family: $buttonPrimaryFontFamily;
  @include mint-button-primary-active($buttonPrimaryFontColor);

  &--full {
    width: 100%;
    text-align: center;
  }
}

.mint-button-primary--alt {
  @include mint-button-primary-three-color-variant($buttonAltColor, $buttonAltColorGradient, $buttonAltShadowColor);
}

.mint-button-primary--dark {
  @include mint-button-primary-three-color-variant($buttonDarkColor, $buttonDarkColorGradient, $buttonDarkShadowColor);
}

.mint-button-primary--fb {
  @include mint-button-primary-three-color-variant($buttonFbColor, $buttonFbColorGradient, $buttonFbShadowColor);

  .mint-button-primary__hole {
    @extend .mint-icon-fb;

    &:before {
      font-size: 20px;
      margin-right: $layoutDefaultPadding / 2;
    }
  }
}

.mint-button-primary-round {
  @extend .mint-icon-plus;
  @include clearfix();
  display: inline-block;
  &:before {
    display: inline-block;
    @include mint-button-primary-three-color-variant($buttonColor, $buttonColorGradient);
    width: $buttonRoundAddSize;
    height: $buttonRoundAddSize;
    border-radius: 50%;
    line-height: $buttonRoundAddSize;
    text-align: center;
    color: $buttonRoundAddColor;
    font-size: $buttonRoundAddFontSize;
    box-shadow: 0 3px 10px 0 rgba(0,0,0,0.3);
  }
  &__label {
    float: left;
    font-family: $buttonRoundLabelFontFamily;
    font-size: $buttonRoundLabelFontSize;
    border-radius: 4px;
    line-height: 12px;
    background: $buttonRoundLabelBackground;
    color: $buttonRoundLabelColor;
    text-transform: uppercase;
    padding: 3px 5px;
    margin: 16px 10px 0 0;
    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.3);
  }
}

// Secondary buttons
.mint-button-secondary {
  $borderSize: 2px;
  @include mint-button-basic-styles();
  @include mint-button-basic-dimensions($buttonSecondaryHeight);
  @include mint-button-basic-colors($buttonSecondaryColor, $buttonSecondaryColor, $buttonSecondaryTextColorHover);
  @include mint-button-secondary-active($buttonSecondaryColor, $buttonSecondaryTextColorHover, $buttonSecondaryColor);
  @include hole;

  border-width: $borderSize;
  border-style: solid;
  background-color: transparent;
  font-size: $buttonSecondaryFontSize;
  font-family: $buttonSecondaryFontFamily;
  transition: background-color 0.3s ease-out, color 0.3s ease-out;
  &:hover, &:focus {
    outline: none;
  }

  &--inverse {
    @include mint-button-basic-colors($buttonSecondaryColor, $buttonSecondaryTextColorHover, $buttonSecondaryColor);
    @include mint-button-secondary-active($buttonSecondaryColor, $buttonSecondaryColor, $buttonSecondaryTextColorHover);
  }

  &--full {
    width: 100%;
    text-align: center;
  }
}

.mint-button-secondary--alt {
  @include mint-button-secondary-two-color-variant($buttonSecondaryAltColor, $buttonSecondaryAltTextColorHover);
}

.mint-button-secondary--dark {
  @include mint-button-secondary-two-color-variant($buttonSecondaryDarkColor, $buttonSecondaryDarkTextColorHover);
}

.mint-button-secondary--peach {
  @include mint-button-secondary-two-color-variant($buttonSecondaryPeachColor, $buttonSecondaryPeachTextColorHover);
}

.mint-button-secondary--gray {
  @include mint-button-secondary-two-color-variant($buttonSecondaryGrayColor, $buttonSecondaryGrayTextColorHover);
}

.mint-button-secondary--light {
  @include mint-button-secondary-two-color-variant($buttonSecondaryLightColor, $buttonSecondaryLightTextColorHover);
}

.mint-button-secondary--action {
  @include mint-button-secondary-three-color-variant($buttonSecondaryActionColor, $buttonSecondaryActionTextColor, $buttonSecondaryActionTextColorHover);
}

.mint-button-secondary--light-blue {
  @include mint-button-secondary-two-color-variant($buttonSecondaryLightBlueColor, $buttonSecondaryLightBlueTextColorHover);
}

.mint-button-secondary--with-icon {
  @include mint-button-basic-colors($buttonSecondaryIconColor, $buttonSecondaryIconColor, transparent);
  @include mint-button-secondary-with-icon-active($buttonSecondaryIconBorderColorHover, $buttonSecondaryIconColor);
}

.mint-button-secondary--small {
  @include mint-button-basic-dimensions($buttonSecondarySmallHeight);
}

.mint-icon-as-button {
  @include component;
  background: none;
  border: none;
  outline: none;
  padding: 0;
  cursor: pointer;
  width: 40px;
  height: 40px;
  font-size: 0;
  line-height: 0;

  &:before {
    color: $iconAsButtonColor;
    font-size: 26px;
  }

  &:active:before {
    color: rgba($iconAsButtonColor, 0.7);
  }

  &--small, &--medium {
    &:before {
      font-size: 18px;
    }
  }

  &--medium {
    width: 30px;
    height: 30px;
  }

  &--small {
    width: 24px;
    height: 24px;
  }

  &--with-border {
    border: solid $iconAsButtonColor 2px;
    border-radius: 50%;
  }

  &--light {
    border-color: $iconAsButtonLightColor;

    &:before {
      color: $iconAsButtonLightColor;
    }

    &:active:before {
      color: rgba($iconAsButtonLightColor, 0.7);
    }
  }

  &--gray {
    border-color: $iconAsButtonGrayColor;

    &:before {
      color: $iconAsButtonGrayColor;
    }

    &:active:before {
      color: rgba($iconAsButtonGrayColor, 0.7);
    }
  }
}

